apps/prod2/cloudevents-server/envoy-security-policy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: cloudevents-server-external
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: cloudevents-server-external
  basicAuth:
    users:
      name: httproute-auth-secret
