apps/prod2/cloudevents-server/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cloudevents-server-external
spec:
  parentRefs:
    - kind: Gateway
      name: external-https
      namespace: infra
  hostnames:
    - do2.pingcap.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /cloudevents-server
      backendRefs:
        - name: cloudevents-server
          port: 80
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: cloudevents-server-external
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: cloudevents-server-external
  basicAuth:
    users:
      name: httproute-auth-secret
